--- a/project.html
+++ b/project.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
-<body style="background-color: azure;" text="#00000">
+<body>
 
+    <div class="square">
+        
+        <div><h1>Нахрани се там</h1></div>
+
+    </div>
 
 </body>
 </html>
