--- a/project.html
+++ b/project.html
@@ -5,15 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+    </ul>
+    <div style="margin-left:0%;padding:0px 16px;height:100px;">      
 
-    <div class="square">
-        
-        <div><h1>Нахрани се там</h1></div>
+<div class="square">
 
+    <div>  
+        <h1>Нахрани се там</h1></div>
     </div>
+    
+   
+</div>
 
 </body>
 </html>
