--- a/project.html
+++ b/project.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="#home"><img src="user.png" alt="user" width="40" height="40"></a></li>
         <li><a href="#news">News</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#about">About</a></li>
