--- a/Sign_up.html
+++ b/Sign_up.html
@@ -3,8 +3,16 @@
 <head>
     <link rel="stylesheet" href="Sigh_up.css">
 </head>   
-
-
+<body>
+<form >
+    <label for="fname">Name</label><br>
+    <input type="text" id="fname" name="fname" ><br>
+    <label for="lname">Pasword</label><br>
+    <input type="text" id="lname" name="lname" ><br><br>
+    <input type="submit" value="Submit">
+  </form> 
+  
+</body>
 
 
 </html>
