--- a/FirstPage.html
+++ b/FirstPage.html
@@ -40,45 +40,29 @@
 <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
       
       <script>
-      
       document.addEventListener("DOMContentLoaded", function () {
-    fetch('get-data.php')
+    var map = L.map('map').setView([51.505, -0.09], 13);
+
+    L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+    // Fetch restaurant data from the server
+    fetch('get_restaurants.php')
         .then(response => response.json())
         .then(data => {
-            if (!Array.isArray(data)) {  
-                console.error("Expected an array but got:", data);
-                return;
-            }
-
-            // Initialize the map
-            var map = L.map('map').setView([43.217715, 27.905228], 13); 
-
-            // Add OpenStreetMap tiles
-            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-            }).addTo(map);
-
-            // Loop through restaurant data and add markers
             data.forEach(restaurant => {
-                let name = restaurant.name;
-                let menu = restaurant.menu;
-                let address = restaurant.address;
-                let phone = restaurant.phone;
-                let longitude = parseFloat(restaurant.longitude); // Convert to number
-                let latitude = parseFloat(restaurant.latitude);   // Convert to number
-
-                // Ensure valid coordinates
-                if (!isNaN(latitude) && !isNaN(longitude)) {
-                    // Create marker and add to map
-                    L.marker([latitude, longitude]).addTo(map)
-                        .bindPopup(`<b>${name}</b><br>📜 ${menu}<br>📍 ${address}<br>📞 ${phone}`);
-                } else {
-                    console.warn("Invalid coordinates for restaurant:", restaurant);
-                }
+                L.marker([restaurant.latitude, restaurant.longitude]).addTo(map)
+                    .bindPopup(`<b>${restaurant.name}</b><br>
+                                <strong>Меню:</strong> ${restaurant.menu}<br>
+                                <strong>Адрес:</strong> ${restaurant.address}<br>
+                                <strong>Телефон:</strong> ${restaurant.phone}`);
             });
         })
-        .catch(error => console.error("Fetch error:", error));
+        .catch(error => console.error('Error fetching restaurant data:', error));
 });
+
+  
 </script>
 
 
