--- a/StartPage.html
+++ b/StartPage.html
@@ -17,11 +17,20 @@
     <div class="square">
 
         <div class="button"> 
-            <a href="FirstPage.html" class="button-link">Кликни тук</a>
+            <a href="index.html" class="button-link">Кликни тук</a>
         </div>
 
     </div>
 
+<div class="SuggestionButton"> 
+    <a href="rec-res.php" class="SuggestionButton-link">Предложи заведение</a>
+</div>
+
+<div class="AccountButton"> 
+    <a href="Sign_up.php" class="AccountButton-link">Предложи заведение</a>
+</div>
+
+<img src="SuggestionIcon.png" alt="Suggestion" class="img2">
 <img src="Logo.png" alt="Logo" class="img">
 
 
