--- a/Index.html
+++ b/Index.html
@@ -25,13 +25,29 @@
     <div class="button2"> 
         <a href="rec-res.php" class="button-link">Предложи</a>
     </div>
-    <div class="button4"> 
+    <div class="button3"> 
         <a href="LoginPage.php" class="button-link">Влизане</a>
     </div>
-    <div class="button5"> 
+    <div class="button4"> 
         <a href="Sign_up.php" class="button-link">Регистриране</a>
     </div>
+    <div class="button5"> 
+        <a href="Sign_up.php" class="button-link">За нас</a>
+    </div>
+    <div class="button6"> 
+        <a href="Sign_up.php" class="button-link">Q&A</a>
+    </div>
 </div>
+
+
+
+
+
+
+
+
+
+
 
 <!-- Map Container (where the image was) -->
 <div id="map"></div>
