--- a/StartPage.html
+++ b/StartPage.html
@@ -12,24 +12,26 @@
 </head>
 <body>
 
+<div class="h1">dasd</div>
 
 
-    <div class="square">
+<div class="square">
 
-        <div class="button"> 
-            <a href="index.html" class="button-link">Кликни тук</a>
-        </div>
-
+    <div class="button"> 
+        <a href="index.html" class="button-link">Кликни тук</a>
     </div>
+
+</div>
 
 <div class="SuggestionButton"> 
     <a href="rec-res.php" class="SuggestionButton-link">Предложи заведение</a>
 </div>
 
 <div class="AccountButton"> 
-    <a href="Sign_up.php" class="AccountButton-link">Предложи заведение</a>
+    <a href="Sign_up.php" class="AccountButton-link">Акаунт</a>
 </div>
 
+<img src="account.png" alt="Account" class="img3">
 <img src="SuggestionIcon.png" alt="Suggestion" class="img2">
 <img src="Logo.png" alt="Logo" class="img">
 
