--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 <div class="square">
 
     <div class="button"> 
-        <a href="MainPage.html" class="button-link">Кликни тук</a>
+        <a href="MainPage.html" class="button-link">Към Картата></a>
     </div>
  
 </div>
@@ -37,13 +37,13 @@
 
 
 <div class="account-menu">
-    <button class="account-button">Акаунт</button>
+    <button class="account-button">Профил</button>
     <div class="account-dropdown">
 
-            <a href="LoginPage.php">Login</a>
-            <a href="Sign_up.php">Sign Up</a>
+            <a href="LoginPage.php">Влизане</a>
+            <a href="Sign_up.php">Регистриране</a>
 
-            <a href="logout.php">Logout</a>
+            <a href="logout.php">Излизане</a>
 
     </div>
 </div>
