--- a/MainPage.html
+++ b/MainPage.html
@@ -26,26 +26,18 @@
         <a href="rec-res.php" class="button-link">Предложи</a>
     </div>
     <div class="button3"> 
-        <a href="LoginPage.php" class="button-link">Влизане</a>
-    </div>
-    <div class="button4"> 
-        <a href="Sign_up.php" class="button-link">Регистриране</a>
-    </div>
-    <div class="button5"> 
         <a href="" class="button-link">За нас</a>
     </div>
-    <div class="button6"> 
+    <div class="button4"> 
         <a href="" class="button-link">Q&A</a>
+    </div>
+    <div class="button5"> 
+        <a href="" class="button-link">Профил</a>
     </div>
 </div>
 
 <div class="rectangle"></div>
 
-<div class="AccountButton"> 
-    <a href="Sign_up.php" class="AccountButton-link">Акаунт</a>
-</div>
-
-<img src="account.png" alt="Account" class="img3">
 
 
 
