--- a/MainPage.html
+++ b/MainPage.html
@@ -20,7 +20,7 @@
 
 <div class="square">
     <div class="button"> 
-        <a href="Index.html" class="button-link">Начало</a>
+        <a href="index.html" class="button-link">Начало</a>
     </div>
     <div class="button2"> 
         <a href="rec-res.php" class="button-link">Предложи</a>
