--- a/AboutUsPage.html
+++ b/AboutUsPage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Нахрани се там - Вкусно!</title>
-    <link rel="stylesheet" href="LoginPage.css"> 
+    <link rel="stylesheet" href="AboutUsPage.css"> 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
         <a href="rec-res.php" class="button-link">Предложи</a>
     </div>
     <div class="button3"> 
-        <a href="" class="button-link">За нас</a>
+        <a href="AboutUsPage.html" class="button-link">За нас</a>
     </div>
 
     <div class="button4"> 
@@ -37,12 +37,16 @@
     </div>
 </div>
 
-<div class="square2">   
+<div class="square2"></div>
 
-    <h3>виктор христов</h3>
+<div class="text">Кои сме ние?</div>
+<div class="text2">Ние сме Калоян Георгиев и Виктор Христов <br> в Професионална Гимназия по Компютърно <br> Моделиране и Компютърни Системи <br> “Акад. Благовест Сендов” град Варна.</div>
 
-</div>
+<div class="text3">Контакти</div>
+<div class="text4">Можете да се свържете с нас по имейлите, <br> или по номерите отдолу.</div>
 
+<div class="text5">Имейлu:<br>kaloyangeorgiev29@itpg-varna.bg<br>viktorhristov@itpg-varna.bg</div>
+<div class="text6">Номери:<br>087 778 7822<br>088 441 7807</div>
 
 </body>
 </html>
