--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="square">
 
     <div class="button"> 
-        <a href="MainPage.html" class="button-link">Към Картата></a>
+        <a href="MainPage.php" class="button-link">Към Картата></a>
     </div>
  
 </div>
